# FastAPIProjectWork

./: .example.env  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  init_db.sh  main.py  pyproject.toml  redis-test-docker.yml  requirements.txt
alembic/: env.py
example/: assortment.json  machine.json  material.json  material_category.json  tooling.json
src/auth/: __init__.py  dep.py  exceptions.py  hash.py  middleware.py  token.py
src/clients/: captcha.py  dadata.py  html.py  mail.py
src/db/: __init__.py  base.py  db.py  db_boundary.py  decorators.py  enterprise_base.py  enums.py  func.py  models.py
src/db/models/: __init__.py  enterprise.py  machines.py  materials.py  users.py
src/db/utils/: consts.py  orm.py  transfer.py
src/handlers/: __init__.py  auth.py  clients.py  enterpise.py  error_handler.py  user.py
src/handlers/resources/: __init__.py  assortment.py  assortment_gost.py  assortment_type.py  gosts.py  machine_type.py  machines.py  main.py  material_categories.py  materials.py  methods.py  operation_type.py  resources.py  toolings.py  tools.py
src/infrastructure/celery/: mail.py  (+2 more)
src/logging/: access.py  context.py  errors.py  formatters.py  setup.py
src/serializers/: clients.py  enterprise.py  resources.py  token.py  user.py  user_serializer.py
src/services/: __init__.py  auth_service.py  client_service.py  enterprise_service.py  errors.py  exceptions.py  translators.py  user.py  user_service.py
src/tests/: conftest.py
src/use_cases/: __init__.py  fill_data_workflow.py  join_employee_workflow.py
test_dir/: enums.py
(+15 files in other folders)
